# def

./: .gitmodules  CMakeLists.txt  README.md
src/: CMakeLists.txt  main.cpp
src/interpreter/: CMakeLists.txt
src/interpreter/include/interpreter/: error.h  interpreter.h
src/interpreter/src/: error.cpp  interpreter.cpp
src/parser/: CMakeLists.txt
src/parser/include/parser/: assign.h  call.h  dot.h  expression.h  function.h  kinds.h  new.h  number.h  operator.h  parentheses.h  reference.h  return.h  root.h  type.h  variable.h
src/parser/src/: assign.cpp  call.cpp  dot.cpp  expression.cpp  function.cpp  new.cpp  number.cpp  operator.cpp  parentheses.cpp  reference.cpp  return.cpp  root.cpp  type.cpp  variable.cpp
